--- a/src/game.sass
+++ b/src/game.sass
@@ -15,15 +15,13 @@
   padding: 0 .5em
 
 #word-container
-  display: inline-flex
+  display: flex
   flex-direction: column
   background: #efefef
   border: solid 2px lightgray
   border-radius: 10px
-  margin-top: 1em
-  margin-bottom: 4em
-  padding: .5em 2em
-  width: calc(100vw - 200px)
+  margin: 1em auto 4em auto
+  width: 70vw
 
   #word-lang
     background: white
@@ -85,8 +83,6 @@
   border-color: maroon!important
   color: maroon!important
   transition: 0.2s ease-in-out
-
-#input
 
 #result-input
   margin-top: 2em
